examples/stun-setters/crashers/a6de690b04292410e3c88d2e3cd967e6cb0e51ec.output
panic: runtime error: slice bounds out of range

goroutine 1 [running]:
github.com/go-rtc/stun.(*MappedAddress).getAs(0xc42000c960, 0xc420018320, 0x8023, 0xc42001a3d8, 0xc420018338)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/addr.go:71 +0x1e8
github.com/go-rtc/stun.(*AlternateServer).GetFrom(0xc42000c960, 0xc420018320, 0x7f47a877a001, 0x2)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/addr.go:37 +0x3c
github.com/go-rtc/stun.FuzzSetters(0x7f47a877a000, 0x3, 0x200000, 0x3)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/fuzz.go:97 +0x33c
go-fuzz-dep.Main(0x517548)
	/tmp/go-fuzz-build843731397/goroot/src/go-fuzz-dep/main.go:49 +0xde
main.main()
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/go.fuzz.main/main.go:10 +0x2d

goroutine 17 [syscall, locked to thread]:
runtime.goexit()
	/tmp/go-fuzz-build843731397/goroot/src/runtime/asm_amd64.s:2197 +0x1
exit status 2